# BlackHole

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: camera.cpp  camera.h  glad.c  main.cpp  raytrace.comp  vec3.h
